fix canvas overflow

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -11,6 +11,10 @@ body {
     justify-content: center;
 }
 
+.canvas {
+    position: relative;
+}
+
 .snowing {
     position: absolute;
     filter: blur(.8px);
